add API to catalog fix13
