# python-app/template/src/app.py
@@ -15,7 +15,7 @@ def info():
             'app_name': '${{values.app_name}}'
     }) 
 
-@app.route('/api/v1/healthz')
+@app.route('/api/v1/health')
 def healthz():
     return jsonify({'status':'up'}), 200
 
@@ -24,4 +24,4 @@ if __name__ == '__main__':
     app.run(host="0.0.0.0")
 
 #'/api/v1/details'
-#'/api/v1/hetlhz'
+#'/api/v1/health'
